prevent last menu item with dropdown from overlapping the right bounds, instead it should overflow to the left

--- a/sass/cd/cd-header/_cd-nav.scss
+++ b/sass/cd/cd-header/_cd-nav.scss
@@ -265,7 +265,7 @@
         }
 
         &:last-child {
-          ul.cd-nav__child-nav {
+          > ul.menu {
             left: auto;
             right: -1px;
           }
